--- a/templates/admin_idtemplates.twig
+++ b/templates/admin_idtemplates.twig
@@ -2,15 +2,12 @@
 
 {% block content %}
 
-<header>
-	<h1>{{ page.glob.l10n.admin_idtemplates }}</h1>
-</header>
 {% include "flash_messages.twig" %}
 
 <p>{{page.glob.l10n.admin_idtemplates_legend|raw}}</p>
-<ul id="idtemplates">
+<ul id="idtemplates" class="w-full">
 {% for template in templates %}
-	<li>
+	<li class="li-config">
 		<a class="template">
 			<h2>
 				<span class="template-name">{{template.name}}</span>
@@ -19,9 +16,14 @@
 			</h2>
 			<p class="template-uri">{{template.val|raw}}</p>
 		</a>
-		<a class="idtemplate_clear" href="#" data-template="{{template.name}}" data-proot="{{page.rot}}">
-			{{page.glob.l10n.admin_idtemplate_clear}}
-		</a>
+		<div class="ml-4 flex items-end">
+			<a class="top-link" href="#" title="{{page.glob.l10n.admin_idtemplate_clear}}">
+				<span class="sr-only">{{page.glob.l10n.admin_idtemplate_clear}}</span>
+				<svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+				</svg>
+			</a>
+		</div>
 	</li>
 {% endfor %}
 </ul>
