--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,53 +2,60 @@
 @tailwind components;
 @tailwind utilities;
 
-.body {
-    @apply bg-manatee-50 /* TODO enable dark:bg-manatee-900 */
-}
-div.wrapper {
-    @apply px-1 pt-0.5 md:container md:mx-auto
-}
+@layer components {
 
-header {
-    @apply flex items-center justify-between bg-manatee-200
-}
+    .input {
+        @apply h-6 text-sm px-1 py-0
+    }
 
-nav {
-    @apply bg-manatee-200
-}
+    .top-link {
+        @apply bg-manatee-300 px-1 mx-1 rounded text-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white
+    }
 
-footer {
-    @apply bg-manatee-200 flex items-center
-}
+    .config-fieldset {
+        @apply grid grid-flow-row grid-rows-2 grid-cols-2 md:grid-rows-1 md:grid-cols-4 m-1 p-1 gap-1
+    }
 
-.input {
-    @apply h-6 text-sm px-1 py-0
-}
+    .config-fieldset-small {
+        @apply grid grid-flow-row grid-cols-2 m-1 p-1 gap-1
+    }
 
-footer {
-    @apply py-1 sm:px-6 lg:px-8
-}
+    .config-fieldset > label {
+        @apply text-left
+    }
 
-.top-link {
-    @apply bg-manatee-300 px-1 mx-1 rounded text-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white
-}
+    .config-fieldset > select, input {
+        @apply h-12
+    }
+
+    .config-fieldset > p {
+        @apply text-sm col-span-2
+    }
+
+    .btn-config {
+        @apply w-full bg-steel-500 text-center text-white font-bold p-4 rounded-b
+    }
+
+    .li-config {
+        @apply bg-manatee-200 rounded border m-2 p-2 flex items-center justify-between
+    }
+
+    .stats-cell {
+        @apply py-4 px-4 bg-manatee-200 border rounded border-chocolate-400
+    }
+    .stats-header {
+        @apply text-blush-400 text-xl
+    }
+    .stats-value {
+        @apply text-blush-600 text-4xl font-bold text-center
+    }
 
 
-.stats-cell {
-    @apply py-4 px-4 bg-manatee-200 border rounded border-chocolate-400
-}
-.stats-header {
-    @apply text-blush-400 text-xl
-}
-.stats-value {
-    @apply text-blush-600 text-4xl font-bold text-center
-}
+    div.listview-titles {
+        @apply grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4
+    }
 
-
-div.listview-titles {
-    @apply grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4
-}
-
-div.listview {
-    @apply grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6
+    div.listview {
+        @apply grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6
+    }
 }
