--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,11 +5,14 @@
 @layer components {
 
     .input {
-        @apply h-6 text-sm px-1 py-0
+        @apply h-6 text-sm px-1 py-0 disabled:opacity-50
     }
 
     .top-link {
         @apply bg-manatee-300 px-1 mx-1 rounded text-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white
+    }
+    .top-link-disabled {
+        @apply bg-manatee-300 px-1 mx-1 rounded text-black opacity-50
     }
 
     .config-fieldset {
