--- a/templates/titles.twig
+++ b/templates/titles.twig
@@ -6,13 +6,5 @@
 {% endblock %}
 
 {% block content %}
-	<div class="listview-titles">
-		{% for book in books %}
-			{% if book.initial != "" %}
-				<li data-role="list-divider"> {{ book.initial }}</li>
-			{% else %}
-				{% include "title_entry.twig" %}
-			{% endif %}
-	  {% endfor %}
-	</div>
+	{% include "titles_listview.twig" %}
 {% endblock %}
