Updated global search

--- a/templates/admin_idtemplates.twig
+++ b/templates/admin_idtemplates.twig
@@ -42,7 +42,7 @@
 			{{page.glob.l10n.admin_idtemplate_template}}
 		</label>
 		<input name="template" id="template" value="" placeholder="{{page.glob.l10n.admin_idtemplate_template}}" type="url"/>
-		<button type="submit" data-ajax="true" data-icon="check" data-mini="true">
+		<button type="submit">
 			{{page.glob.l10n.save}}
 		</button>
 	</form>
