--- a/templates/authors.twig
+++ b/templates/authors.twig
@@ -6,14 +6,6 @@
 {% endblock %}
 
 {% block content %}
-    <div class="listview">
-        {% for author in authors %}
-            {% if author.initial != "" %}
-                <li data-role="list-divider"> {{ author.initial }}</li>
-            {% else %}
-                {% include "author_entry.twig" %}
-            {% endif %}
-      {% endfor %}
-    </div>
+    {% include "authors_listview.twig" %}
 {% endblock %}
 
